maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:14: error: not found: value prendBaggle
  	prendBaggle()
        ^